--- a/projects/stage-0/user-platform/user-web/pom.xml
+++ b/projects/stage-0/user-platform/user-web/pom.xml
@@ -84,6 +84,12 @@
             <artifactId>microprofile-config-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.jolokia</groupId>
+            <artifactId>jolokia-core</artifactId>
+            <version>${jolokia-core.version}</version>
+        </dependency>
+
 
     </dependencies>
 
