--- a/projects/stage-0/user-platform/user-web/src/main/webapp/WEB-INF/web.xml
+++ b/projects/stage-0/user-platform/user-web/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,18 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+    <!-- jolokia servlet -->
+    <servlet>
+        <servlet-name>jolokia-agent</servlet-name>
+        <servlet-class>org.jolokia.http.AgentServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>jolokia-agent</servlet-name>
+        <url-pattern>/jolokia/*</url-pattern>
+    </servlet-mapping>
+
     <!-- The mapping for the default servlet -->
     <servlet-mapping>
         <servlet-name>default</servlet-name>
